WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
175399
Invalidate PlaybackSessionManager in same fashion as VideoFullscreenManager.
https://bugs.webkit.org/show_bug.cgi?id=175399
Summary
Invalidate PlaybackSessionManager in same fashion as VideoFullscreenManager.
Jeremy Jones
Reported
2017-08-09 15:57:35 PDT
Invalidate PlaybackSessionManager in same fashion as VideoFullscreenManager.
Attachments
Patch
(3.24 KB, patch)
2017-08-09 16:02 PDT
,
Jeremy Jones
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jeremy Jones
Comment 1
2017-08-09 16:02:32 PDT
Created
attachment 317755
[details]
Patch
Jeremy Jones
Comment 2
2017-08-09 16:12:26 PDT
rdar://problem/33663344
WebKit Commit Bot
Comment 3
2017-08-09 19:11:51 PDT
Comment on
attachment 317755
[details]
Patch Clearing flags on attachment: 317755 Committed
r220504
: <
http://trac.webkit.org/changeset/220504
>
WebKit Commit Bot
Comment 4
2017-08-09 19:11:52 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug