Invalidate PlaybackSessionManager in same fashion as VideoFullscreenManager. https://bugs.webkit.org/show_bug.cgi?id=175399 rdar://problem/33663344

Patch by Jeremy Jones <jeremyj@apple.com> on 2017-08-09
Reviewed by Eric Carlson.

Invalidate PlaybackSessionManager when WebPage is destructed.

* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::~WebPage):
* WebProcess/cocoa/PlaybackSessionManager.h:
* WebProcess/cocoa/PlaybackSessionManager.mm:
(WebKit::PlaybackSessionManager::~PlaybackSessionManager):
(WebKit::PlaybackSessionManager::invalidate):

Canonical link: https://commits.webkit.org/192122@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@220504 268f45cc-cd09-0410-ab3c-d52691b4dbfc